[package]
name = "sshpass"
version = "0.1.0"
edition = "2021"
authors = ["sshpass-rs contributors"]
license = "GPL-2.0-only"
description = "A Rust implementation of sshpass - noninteractive ssh password provider"
repository = "https://github.com/your-org/sshpass"
homepage = "https://github.com/your-org/sshpass"
documentation = "https://docs.rs/sshpass"
readme = "README.md"
keywords = ["ssh", "password", "automation", "security", "pty"]
categories = ["command-line-utilities", "authentication"]
rust-version = "1.70"

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
zeroize = { version = "1.7", features = ["derive"] }
vte = "0.13"
rpassword = "7"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process", "signal", "ioctl", "term", "fs", "poll"] }
libc = "0.2"
signal-hook = "0.3"

[target.'cfg(windows)'.dependencies]
portable-pty = "0.8"
windows = { version = "0.52", features = [
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }

[[bin]]
name = "sshpass"
path = "src/main.rs"
required-features = []

[lib]
name = "sshpass"
path = "src/lib.rs"
